crates/net/src/snapshots/telmo_net__ui__tests__details.snap
---
source: crates/net/src/ui.rs
expression: render(&app)
---
 Network                                                              ● online  via Wi-Fi

╭─ Interfaces ───────────╮╭─ Wi-Fi ─────────────────────────────────────────────── ● on ─╮
│ ▌ Wi-Fi             ●  ││ ▌ HomeNet-5G                    ▂▄▆█   ● connected           │
│   HomeNet-5G           ││   HomeNet                       ▂▄▆█   saved                 │
│           ╭─ HomeNet-5G ───────────────────────────────────────────────────╮           │
│   Ethernet│                                                                │           │
│   USB LAN │   ip         192.168.1.42                                      │           │
│           │   router     192.168.1.1                                       │           │
│   Thunderb│   dns        1.1.1.1, 1.0.0.1                                  │           │
│   not conn│   public ip  203.0.113.24                                      │           │
│           │   signal     strong · 5 GHz · WPA3                             │           │
│   iPhone U│   password   ••••••••••                                        │           │
│   not conn│                                                                │           │
│           │ y show password (Touch ID)   c copy ip   d forget              │           │
│   VPN     │                                                                │           │
│   Tailscal╰────────────────────────────────────────────────────────────────╯           │
│                        ││                                                              │
│                        ││                                                              │
╰────────────────────────╯╰──────────────────────────────────────────────────────────────╯

 ↵ join  i details  r rescan  s speedtest  p power  ? more  esc close
