crates/net/src/snapshots/telmo_net__ui__tests__join.snap
---
source: crates/net/src/ui.rs
expression: render(&app)
---
 Network                                                              ● online  via Wi-Fi

╭─ Interfaces ───────────╮╭─ Wi-Fi ─────────────────────────────────────────────── ● on ─╮
│ ▌ Wi-Fi             ●  ││   HomeNet-5G                    ▂▄▆█   ● connected           │
│   HomeNet-5G           ││   HomeNet                       ▂▄▆█   saved                 │
│                        ││   Matv-Guest                    ▂▄▆█   saved                 │
│   Ethernet          ●  ││ ▌ Tanaka-AP                     ▂▄▆█                         │
│   USB LAN · 1 Gbps╭─ Join Tanaka-AP ───────────────────────────────╮                   │
│                   │                                                │                   │
│   Thunderbolt     │  password   ••••••••••▏                        │n                  │
│   not connected   │                                                │                   │
│                   │ ↵ join   tab show password   esc cancel        │                   │
│   iPhone USB      │                                                │                   │
│   not connected   ╰────────────────────────────────────────────────╯                   │
│                        ││                                                              │
│   VPN               ●  ││                                                              │
│   Tailscale            ││                                                              │
│                        ││                                                              │
│                        ││                                                              │
╰────────────────────────╯╰──────────────────────────────────────────────────────────────╯

 ↵ join  i details  r rescan  s speedtest  p power  ? more  esc close
