crates/net/src/snapshots/telmo_net__ui__tests__location.snap
---
source: crates/net/src/ui.rs
expression: render(&app)
---
 Network                                                              ● online  via Wi-Fi

╭─ Interfaces ───────────╮╭─ Wi-Fi names hidden ─────────────────────────────────────────╮
│ ▌ Wi-Fi             ●  ││   macOS hides network names until Location is                │
│   HomeNet-5G           ││   allowed for Telmo.                                         │
│                        ││                                                              │
│   Ethernet          ●  ││   L allow Location                                           │
│   USB LAN · 1 Gbps     ││                                                              │
│                        ││ ▌ ‹name hidden›                 ▂▄▆█   ● connected           │
│   Thunderbolt       ○  ││   ‹name hidden›                 ▂▄▆█   saved                 │
│   not connected        ││   ‹name hidden›                 ▂▄▆█   saved                 │
│                        ││   ‹name hidden›                 ▂▄▆█                         │
│   iPhone USB        ○  ││   ‹name hidden›                 ▂▄▆█                         │
│   not connected        ││                                                              │
│                        ││                                                              │
│   VPN               ●  ││                                                              │
│   Tailscale            ││                                                              │
│                        ││                                                              │
│                        ││                                                              │
╰────────────────────────╯╰──────────────────────────────────────────────────────────────╯

 ↵ join  i details  r rescan  s speedtest  p power  ? more  esc close
