crates/net/src/snapshots/telmo_net__ui__tests__qr.snap
---
source: crates/net/src/ui.rs
expression: render(&app)
---
 Network            ╭─ Share HomeNet-5G ─────────────────────────────╮● online  via Wi-Fi
                    │   password  correct-horse-battery              │
╭─ Interfaces ──────│       █▀▀▀▀▀▀▀█▀▀█▀▀███▀▀████▀▀██▀▀▀▀▀▀▀█      │──────────── ● on ─╮
│ ▌ Wi-Fi           │       █ █▀▀▀█ ██▄▄▄ ▀███▄█▄ ▄▄▄ █ █▀▀▀█ █      │onnected           │
│   HomeNet-5G      │       █ █   █ █ ▄▀▀█▀ ▄█▄ ▀ ▄  ▀█ █   █ █      │ed                 │
│                   │       █ ▀▀▀▀▀ █ █ █▀█▀█ ▄ ▄▀▄ █▀█ ▀▀▀▀▀ █      │ed                 │
│   Ethernet        │       █▀███▀█▀▀  ████▀▄▄▀ ▀██ █ ▀▀▀▀▀██▀█      │                   │
│   USB LAN · 1 Gbps│       ██  ▄▄▀▀ ██▄ ▀▄█ █▀█▄▀█ █▄ ▄▄█▄▄▄ █      │                   │
│                   │       █ █ ██▀▀▀▄ █ ▄▀ ██▄  ▀▀█▄▄▀ ▀████ █      │                   │
│   Thunderbolt     │       █▀█▀█▄▀▀█▀ ▀▀ ▄██ ▀▀ ██▄▀█▄█ ▄  ▄██      │n                  │
│   not connected   │       █ █ ▀▀ ▀▀▀▀  ▀ ▀▀█▄ ▄▄▄ █ █ ▄ ▀▄ ▄█      │                   │
│                   │       █▄    ▀▀ █▄▀ ██  █▄  ██ ▄ ▀█ ▀█▀▀ █      │                   │
│   iPhone USB      │       █ ▄▄███▀ ▀ █  ▄▀█▀██ █▀██▀▀ ▀▄▀▄▀ █      │                   │
│   not connected   │       █▄▄▄▀█ ▀▀ ██▀█▄ ▀██▄▄ ▀▄▀▀█▄ █▄ ▀▄█      │                   │
│                   │       █▀▀▀▀ ▄▀▀█  ▄▀▄▀▄ ▀ ▀▀▀ █   ▀ ▄█▄▀█      │                   │
│   VPN             │       █▀▀▀▀▀▀▀█ █▀█ ▄█▄ ▀▄▄▀▀▀▄ █▀█    ▄█      │                   │
│   Tailscale       │       █ █▀▀▀█ █▀     ▄██▄   ▄▄▄ ▀▀▀ ▀█▄ █      │                   │
│                   │       █ █   █ ██▄█▄▄▀ █ █▀ ███▄▄ ▀█▄▄ ▄▄█      │                   │
│                   │       █ ▀▀▀▀▀ █▀███ ██▀▀ ▀▄▄▄  ▀▄█ ▀ █▀ █      │                   │
╰───────────────────│       ███████████████████████████████████      │───────────────────╯
                    │ y hide password   c copy ip   d forget         │
 ↵ join  i details  ╰────────────────────────────────────────────────╯
