crates/net/src/snapshots/telmo_net__ui__tests__speeddone.snap
---
source: crates/net/src/ui.rs
expression: render(&app)
---
 Network › Speedtest                                          Cloudflare · via HomeNet-5G

╭─ Download ────────────────────────────────╮╭─ Upload ──────────────────────────────────╮
│                                           ││                                           │
│   █ █  █  ███   ███                       ││   ███ ███   █ █                           │
│   █ █ ██    █   █                         ││     █ █ █   █ █                           │
│   ███  █  ███   ███                       ││   ███ ███   ███                           │
│     █  █  █     █ █                       ││     █   █     █                           │
│     █ ███ ███ █ ███  Mbps                 ││   ███ ███ █   █  Mbps                     │
│                                           ││                                           │
│   ━━━━━━━━━━━━━━━━━━━━━━━━━  done         ││   ━━━━━━━━━━━━━━━━━━━━━━━━━  done         │
╰───────────────────────────────────────────╯╰───────────────────────────────────────────╯
╭─ Latency ──────────────────────────────────────────────────────────────────────────────╮
│  idle 8 ms    jitter 1.2 ms    under load 24 ms                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 last run  3 h ago   ↓ 388.0   ↑ 41.2   9 ms



  ✓  Copied: ↓ 412.6 Mbps  ↑ 39.4 Mbps  8 ms
 ↵ run again  c copy result  esc back
