crates/net/src/snapshots/telmo_net__ui__tests__wifi.snap
---
source: crates/net/src/ui.rs
expression: render(&app())
---
 Network                                                              ● online  via Wi-Fi

╭─ Interfaces ───────────╮╭─ Wi-Fi ─────────────────────────────────────────────── ● on ─╮
│ ▌ Wi-Fi             ●  ││ ▌ HomeNet-5G                    ▂▄▆█   ● connected           │
│   HomeNet-5G           ││   HomeNet                       ▂▄▆█   saved                 │
│                        ││   Matv-Guest                    ▂▄▆█   saved                 │
│   Ethernet          ●  ││   Tanaka-AP                     ▂▄▆█                         │
│   USB LAN · 1 Gbps     ││   DIRECT-7F-HP OfficeJet        ▂▄▆█                         │
│                        ││   aterm-5c1d2e-g                ▂▄▆█                         │
│   Thunderbolt       ○  ││   Starbucks_WiFi                ▂▄▆█   open                  │
│   not connected        ││   hidden network                ▂▄▆█                         │
│                        ││                                                              │
│   iPhone USB        ○  ││   a show 2 saved networks out of range                       │
│   not connected        ││                                                              │
│                        ││                                                              │
│   VPN               ●  ││                                                              │
│   Tailscale            ││                                                              │
│                        ││                                                              │
│                        ││                                                              │
╰────────────────────────╯╰──────────────────────────────────────────────────────────────╯

 ↵ join  i details  r rescan  s speedtest  p power  ? more  esc close
